Closed Bug 1989498 Opened 6 months ago Closed 4 months ago

[ews] EWS Folder Properties "Select this folder for offline use" doesn't work.

Categories

(MailNews Core :: Networking: Exchange, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED
145 Branch

People

(Reporter: benc, Assigned: benc)

References

(Blocks 2 open bugs)

Details

Attachments

(2 files)

Now that EWS folders have dome autosync support for downloading messages for offline, the folder properties dialog needs a little work.

i.e. right click on a folder, and select the "Properties" menu item.
Mainly the "Synchronisation" tab.
It currently seems to show the checkboxes and "Download Now" buttons for both IMAP and news.

See Also: → 1989500

Is this a duplicate of bug 1989067?

Flags: needinfo?(brendan)
Flags: needinfo?(benc)

(In reply to Toby Pilling [:tobyp] from comment #1)

Is this a duplicate of bug 1989067?

Yes.... although,

  1. the "Select this folder for offline use" seems to be ignored (probably my fault that it's being ignored, but there should also be something somewhere to set an appropriate default (on for inbox, off for trash and junk etc...). Not sure where that happens for IMAP/News.
  2. and the "download now" button just Asserts (Bug 1989500)

I think we can repurpose this bug for 1.

Flags: needinfo?(brendan)
Flags: needinfo?(benc)
Summary: [ews] IMAP and News autosync settings shown in EWS Folder Properties dialog → [ews] EWS Folder Properties "Select this folder for offline use" doesn't work.

Please use the correct product and component when filing Exchange bugs, otherwise they're quick to fall out of people's radar.

(In reply to Ben Campbell from comment #2)

(In reply to Toby Pilling [:tobyp] from comment #1)

Is this a duplicate of bug 1989067?

Yes.... although,

  1. the "Select this folder for offline use" seems to be ignored (probably my fault that it's being ignored, but there should also be something somewhere to set an appropriate default (on for inbox, off for trash and junk etc...). Not sure where that happens for IMAP/News.
  2. and the "download now" button just Asserts (Bug 1989500)

I think we can repurpose this bug for 1.

Agreed! I left these in because we had previously discussed that you would be looking into message download controls as part of bug 1986399 et al. Though if you think it'd be better to hide this setting until we're able to plug it in the right place, I'm happy to do so too.

Component: General → Networking: Exchange
Product: Thunderbird → MailNews Core

(In reply to Brendan Abolivier [:babolivier] from comment #3)

Agreed! I left these in because we had previously discussed that you would be looking into message download controls as part of bug 1986399 et al. Though if you think it'd be better to hide this setting until we're able to plug it in the right place, I'm happy to do so too.

No, no, they should definitely be there. We just need to figure out how they're meant to work :-)

Assignee: nobody → benc
Status: NEW → ASSIGNED
See Also: → 1991002

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/2dfde209423d
Inline and remove nsImapIncomingServer::CreateHostSpecificPrefName(). r=mkmelin

Target Milestone: --- → 145 Branch
Keywords: leave-open

De-queueing out of concern regarding side effects I've noted on the patch.

Pushed by vineet@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/59a892814f8b
Wire up offline-message policy settings for EWS folders. r=mkmelin,babolivier

Pushed by daniel@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/044739e795bd
Wire up offline-message policy settings for EWS folders. r=mkmelin,babolivier

Depends on: 1995078
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Keywords: leave-open
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: