Bug 1989498 - Inline and remove nsImapIncomingServer::CreateHostSpecificPrefName(). r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D266284

--HG--
extra : amend_source : 3338eac0ae6f52c02c8fb5f0c36318388433eca1