mailnews/imap/src/nsImapIncomingServer.h
@@ -84,8 +84,6 @@ class nsImapIncomingServer : public nsMsgIncomingServer,
   nsresult GetImapConnection(nsIImapUrl* aImapUrl,
                              nsIImapProtocol** aImapConnection);
   nsresult CreateProtocolInstance(nsIImapProtocol** aImapConnection);
-  nsresult CreateHostSpecificPrefName(const char* prefPrefix,
-                                      nsAutoCString& prefName);
 
   nsresult DoomUrlIfChannelHasError(nsIImapUrl* aImapUrl, bool* urlDoomed);
   bool ConnectionTimeOut(nsIImapProtocol* aImapConnection);
